--- a/Views/Department/Details.cshtml
+++ b/Views/Department/Details.cshtml
@@ -22,7 +22,7 @@
                             <td>@item.Id</td>
                             <td>@item.Name</td>
                             <td>
-                            <a asp-action="StudentGrade" asp-route-crsId="@item.Id" asp-route-deptId="@Model.Id" type="button" class="btn btn-warning">Edit Grade</a>
+                            <a asp-action="UpdateStudentDegree" asp-route-crsId="@item.Id" asp-route-deptId="@Model.Id" type="button" class="btn btn-warning">Edit Grade</a>
                             </td>
                         </tr>
                     }
