--- a/Views/Student/Create.cshtml
+++ b/Views/Student/Create.cshtml
@@ -4,6 +4,9 @@
 
 <form action="create" method="post">
     <partial name="CreateUpdate" />
+    <input type="file" />
+    @*<input IformFile *@
+        
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
