--- a/Views/Account/Registration.cshtml
+++ b/Views/Account/Registration.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post" >
+        <form method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label asp-for="UserName" class="control-label"></label>
                 <input asp-for="UserName" class="form-control" />
@@ -31,6 +31,8 @@
                 <input asp-for="Confirmpassword" class="form-control" />
                 <span asp-validation-for="Confirmpassword" class="text-danger"></span>
             </div>
+              <input type="file" name="imagepath" accept="image/png, image/jpeg, image/gif" class="form-control-file" />
+            
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <input type="submit" value="Register" class="btn btn-primary" />
