--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Student_Management_System
 @using Student_Management_System.Models
 @using Student_Management_System.Service
+@using Microsoft.AspNetCore.Identity;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
